fix random variable unresolve bug

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context=".MainActivity">
 
     <EditText
-        android:id="@+id/search_book"
+        android:id="@+id/search_box"
         android:hint="Search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
@@ -16,6 +16,12 @@
     <Button
         android:text="Load"
         android:onClick="loadButtonClicked"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <Button
+        android:text="Manage Account"
+        android:onClick="goAccountClicked"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
