--- a/app/src/main/res/layout/account.xml
+++ b/app/src/main/res/layout/account.xml
@@ -8,6 +8,7 @@
     >
 
     <TextView
+        android:id="@+id/fund_text"
         android:text="0 Baht"
         android:textAlignment="textEnd"
         android:textSize="22dp"
