--- a/app/src/main/res/layout/account.xml
+++ b/app/src/main/res/layout/account.xml
@@ -31,6 +31,13 @@
         android:layout_height="wrap_content" />
 
     <Button
+        android:onClick="checkoutClicked"
+        android:text="Checkout"
+        android:textSize="20dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <Button
         android:onClick="doneClicked"
         android:text="Done"
         android:textSize="20dp"
